--- a/植被带.md
+++ b/植被带.md
@@ -10,3 +10,4 @@
 
 >​        植被带的形成决定于所在环境条件的带状区域性分异，主要是热量和水分因素及此二者对>比关系的变化。水热状况差异，典型的地带性植被为优势组成。全球变化，特别是全球气温和降水分布格局的变化必然影响全球植被类型及其分布。
 
+hjhjlv 火炬大厦
